--- a/master.css
+++ b/master.css
@@ -11,21 +11,20 @@ body{
 /*settaggio blocco principale contenente tutti gli
  elementi della mia pagina*/
 .setgeneral{
- height:1300px;
- width:80%;
+ height:1000px;
+ width:70%;
  margin: auto;
 }
 /*fine setteggio blocco principale*/
 /*sezione 1 header */
 header{
  position:relative;
- height:20%;
- width:100%;
- background-image: url("temaheader.jpg");
- background-size: cover;
+ height:25%;
+ background-image:url("temaheader.jpg");
+ background-size:cover;
  border:solid 3px white;
  box-sizing: border-box;
- margin-top:10px;
+ margin-top:5%;
 }
 h1{
   position:absolute;
@@ -36,8 +35,8 @@ h1{
   top:40%;
   transform:translate(-50%,-40%);
   border:solid 3px white;
-  padding-left:12px;
-  padding-right:12px;
+  padding-left:2.5%;
+  padding-right:2.5%;
   box-sizing:border-box;
 }
 h2{
@@ -48,83 +47,151 @@ h2{
   left:50%;
   top:90%;
   transform:translate(-50%,-90%);
+
 }
 /*fine sezione 1*/
 /*settaggio menu posto sotto l'header*/
 .setmenu{
  background-color:#4D4D4D;
- height:5%;
- width:100%;
+ max width:100%;
+ margin-bottom:1%;
 }
-li{
+li {
  float: left;
+ font-style:helvetica;
+ font-size:1em;
  list-style: none;
  color:white;
- text-align: center;
- margin-left:65px;
- margin-top:20px;
+ margin-top:2%;
+ margin-bottom:2%;
+ text-align:left;
+
 }
-.setmenu::after{
+.clearfix::after{
  content:"";
  display: table;
  clear: both;
 }
-/*fine settaggio menu*/
-/*inizio settaggi contenuto principale della pagina*/
-.corpocentro{
- height:65%;
- width:100%;
-}
+ /*inizo settaggi sezione 2
+   aside corpo centrale
+   e widget di destra top
+   center e bottom*/
 .corpocentro::after{
-content:"";
-display: table;
-clear: both;
+ content:"";
+ display: table;
+ clear: both;
 }
-aside{
- background-color:red;
- height:60%;
- width:25%;
+.sx{
+ background-color:white;
+ width:20%;
+ float: left;
+ border:solid 1px black;
+ box-sizing: border-box;
+}
+.seticontitle{
+ width:20%;
+ margin-top:15%;
+ margin-right:5%;
+ margin-left:5%;
  float: left;
 }
-
-section{
- background-color:green;
- height:80%;
- width:50%;
+.seth3{
+ font-size:1.5em;
+ font-family:cursive;
+ margin-right:5%;
+ margin-bottom:15%;
+ margin-left:5%;
+ margin-top:5%;
+}
+.setp{
+ color:green;
+ margin-bottom:15%;
+ margin-left:5%;
+ margin-right:5%;
+}
+/*chiusura settaggi aside sinistra*/
+/* inizio settaggi contenuto centrale*/
+.setcenter{
+ background-color:white;
+ width:55%;
  float:left;
+ margin:0 2.5%;
+ border:solid 1px black;
+ box-sizing: border-box;
+}
+.setstrong{
+ font-size:1.5em;
+ margin-left: 5%;
+ margin-right:5%;
+ margin-top:-10%;
+}
+/*fine settaggi contenuto centrale*/
+/*inizio settagi widget destra
+  a top,center e bottom*/
+.widgedx{
+ width:20%;
+ float:right;
 }
 .widget{
-width:100%;
-height:100%;
-}
-.widget::after{
-content:"";
-display:table;
-clear: both;
-}
-.dxtop{
- background-color:white;
- height:25%;
- width:25%;
- float: left;
-}
-.dxcen{
- background-color:blue;
- height:25%;
- width:25%;
- float: left;
-}
-.dxbottom{
- background-color:brown;
- height:25%;
- width:25%;
- float:left;
-}
-/*fine settaggi contenuto principale*/
-/*settaggio del footer*/
-footer{
- background-color:pink;
- height:10%;
  width:100%;
+ background-color:white;
+ margin-bottom:4%;
+ border:solid 1px black;
 }
-/*fine settaggio footer*/
+.setpwid{
+ font-size:1.2em;
+ font-style:italic;
+ margin-top:10%;
+ margin-left:5%;
+ margin-right:5%;
+ margin-bottom:10%;
+}
+/*fine settaggi widget di destra*/
+/*fine settaggi sezione2*/
+/*inizio settaggio del footer
+  sezione 3*/
+.footer{
+ position:relative;
+ background-color:white;
+ height:15%;
+ margin-bottom:5%;
+}
+.textfooter{
+ position: absolute;
+ color:gray;
+ opacity:0.5;
+ font-size:1em;
+ font-family:cursive;
+ left:50%;
+ top:20%;
+ transform: translate(-50%,-50%);
+}
+.icone{
+ position: relative;
+ width:100%;
+ height:100%;
+}
+.iconefoot{
+ position: absolute;
+ background-size: cover;
+ height:20%;
+ width:5%;
+ bottom:10%;
+ left:20%;
+ opacity:0.5;
+}
+.iconefoot.instagram{
+ left:50%;
+}
+.iconefoot.twitter{
+ left:80%;
+}
+.hrgray{
+ border:solid 1px gray;
+ opacity:0.5;
+ position: relative;
+ top:40%;
+ margin-left:1%;
+ margin-right:1%;
+}
+/*fine settaggi sezione 3*/
